missed a few lines

--- a/docs/5g-on-helium/mobile-poc.mdx
+++ b/docs/5g-on-helium/mobile-poc.mdx
@@ -436,15 +436,13 @@ results of Tests 9 and later are the most recent.
 
 ---
 
----
-
 ## Statistics on Helium Explorer
 
 Speed Test metrics are viewable on the 5G Hotspot's page on Explorer under the `5G Statistics` tab.
 Here are examples of each status and a brief description of each metric and the resulting impact on
 Rewards calculations.
 
-:::note Helium Explorer Statistics
+### Helium Explorer Examples
 
 Choose from the options below to see some example scenarios and the impact on MOBILE rewards.
 
