--- a/docs/5g-on-helium/mobile-poc.mdx
+++ b/docs/5g-on-helium/mobile-poc.mdx
@@ -21,13 +21,13 @@ Hotspots are located where they claim. Put another way, PoC tries to verify, on 
 that Hotspots are honestly representing their location and the wireless network coverage they are
 creating from that location.
 
-Modeled Coverage introduces a fundamental difference in using hexes for the MOBILE Network compared
-to the IOT Network. In the IOT Network, hexes determine the locations and number of Hotspots within
-the given hex. In the MOBILE Network, hexes determine where the coverage exists. Modeled Coverage
-data allows us to un-tie a Radio's location from its signal strength and propagation.
-
-While all current 5G Hotspot models _also_ participate in the IOT Network and PoC, the CBRS Small
+While current 5G Hotspots are _also_ able to participate in the IOT Network and PoC, the CBRS Small
 Cell and 5G aspects of a 5G Hotspot require a new approach to validating PoC.
+
+Modeled Coverage introduces a fundamental difference in using hexes for the MOBILE Network compared
+to the IOT Network where hexes determine the locations and number of Hotspots within the given hex.
+In the MOBILE Network, hexes determine where the coverage exists. Modeled Coverage data allows us to
+un-tie a Radio's location from its signal strength and propagation.
 
 :::tip One Way Traffic
 
@@ -56,6 +56,92 @@ MOBILE PoC Roadmap
 
 ---
 
+## Reward Algorithm
+
+The proposed new algorithm for MOBILE Reward calculation in the MOBILE Rewards Oracle is as follows:
+
+1. Supply the declared transmitter power of each Radio and its location to the Obstruction Data
+   Oracle.
+2. Get all hexes that have coverage from Outdoor Radios based on the information from the
+   Obstruction Data Oracle.
+3. Based on the location of Indoor Radios, get all hexes with Indoor coverage and all adjacent
+   hexes.
+4. Use projected signal loss information from the Obstruction Data Oracle to determine the potential
+   signal strength of each Outdoor Radio in each hex.
+5. For each hex, get at most 5 Outdoor Radios with the top signal strength of the same level.
+
+- If there are more than 5 Radios with the same signal strength level, use the `coverage_claim_time`
+  value to determine the top 5 oldest installations where `coverage_claim_time` is the timestamp
+  when the Radio received the spectrum access grant for the first time.
+- To prevent rewarding "dead" Radios, we propose to reset `coverage_claim_time` if the Radio was not
+  generating a Heartbeat for more than 72 hours and use the time of the last Heartbeat as the new
+  `coverage_claim_time`.
+
+6. Get max 5 Indoor Radios using the same approach as above for Outdoor Radios.
+7. Based on [Modeled Coverage Reward Tiers](#modeled-coverage-reward-tiers), sum up all estimated
+   coverage points earned by each Radio in all hexes and multiply that by `speedtest_multiplier` for
+   each Radio.
+8. Divide the total number of MOBILE Rewards emitted during the Rewards Period by the sum of
+   multiples of [`heartbeat_multiplier`](#heartbeat-reward-tiers),
+   [`estimated_reward_points`](#modeled-coverage-reward-tiers), and
+   [`speedtest_multiplier`](#speed-test-reward-tiers) for each Radio to determine MOBILE Rewards per
+   `estimated_reward_point` for Radio with a passing Speed Test and valid Heartbeats.
+9. Multiply the MOBILE per `estimated_reward_point` by the sum of each Radio's reward points to
+   determine the MOBILE Rewards for each Radio.
+
+The new formula for Reward calculation per Radio:
+
+$$
+W = k_H \times k_S \times C_E \times W_p
+$$
+
+| Variable | Description                      |
+| -------- | -------------------------------- |
+| $W$      | Total rewards                    |
+| $k_H$    | Heartbeat multiplier             |
+| $k_S$    | Speedtest multiplier             |
+| $C_E$    | Estimated coverage points        |
+| $W_p$    | Epoch rewards per coverage point |
+
+### Calculation Example
+
+For simplicity, assume that the total MOBILE Rewards per period is 10,000.
+
+|    Radio    | Heartbeat | Heartbeat multiplier $k_H$ | Speed Test | Speedtest Multiplier $k_S$ | Hex 1 - Hex 10 | Hex 11 - Hex 20 | Hex 21 - Hex 220 | Total Coverage Points | Total Reward Points |
+| :---------: | :-------: | :------------------------: | :--------: | :------------------------: | :------------: | :-------------: | :--------------: | :-------------------: | :-----------------: |
+| 1 (Outdoor) |    Ok     |             1              | Acceptable |             1              |      160       |       80        |       800        |         1,040         |        1,040        |
+| 2 (Outdoor) |    Ok     |             1              |    Poor    |            0.25            |       80       |       40        |                  |          120          |         30          |
+|             |           |                            |            |                            |                |                 |                  |      **Points**       |      **1,070**      |
+
+**Table 3.** Simplified data for two Outdoor Radios with Heartbeat, Speed Test, and Estimated
+Coverage Points for one Reward Period.
+
+|   Radio    | Heartbeat | Heartbeat multiplier $k_H$ | Speed Test | Speedtest Multiplier $k_S$ | Hex 1 | Hex 2 | Hex 3 | Hex 4 | Total Coverage Points | Total Reward Points |
+| :--------: | :-------: | :------------------------: | :--------: | :------------------------: | :---: | :---: | :---: | :---: | :-------------------: | :-----------------: |
+| 3 (Indoor) |    Ok     |             1              |  Degraded  |            0.5             |  100  |  100  |  100  |  400  |          700          |         350         |
+|            |           |                            |            |                            |       |       |       |       |      **Points**       |       **350**       |
+
+**Table 4.** Simplified data for one Indoor Radio with Heartbeat, Speed Test, and Estimated Coverage
+Points for one Reward Period.
+
+$$
+R  \times (1 \times 1 \times 1040 + 1 \times 0.25 \times 120 + 1 \times 0.5 \times 700) = 10,000
+$$
+
+Where R is the reward per one estimated coverage point.
+
+$$
+R = 6.54
+$$
+
+|                   | Calcuation            | Total MOBILE Rewards |
+| ----------------- | :-------------------- | -------------------: |
+| Radio 1 (Outdoor) | 6.54 x 1 x 1 x 1040   |         **6,806.30** |
+| Radio 2 (Outdoor) | 6.54 x 1 x 0.25 x 120 |           **903.14** |
+| Radio 3 (Indoor)  | 6.54 x 1 x 0.5 x 700  |         **2,290.58** |
+
+---
+
 ## Modeled Coverage
 
 With the [passing](https://heliumvote.com/14jH67zhctwb3B5NmwiAjaXQuyF7jZMZCAnfyBYhSpRS3L22sQE) of
@@ -73,14 +159,6 @@ calculate the number of res12 hexes receiving coverage from each Radio.
 Depending on the number of res12 hexes and the resulting signal power in each, the MOBILE Rewards
 Oracle will allot **Coverage Points** to a given Radio for calculating its MOBILE Rewards instead of
 assuming a fixed Radio Type multiplier Reward.
-
-:::tip check coverage
-
-Temporary Modeled Coverage Explorer is available [here](https://coverage-explorer.herokuapp.com/).
-
-Modeled Coverage Explorer is available [here](https://coverage-explorer.helium.com/).
-
-:::
 
 ### Reward Hexagon Sizing
 
@@ -165,6 +243,23 @@ function plot of the sample market Outdoor Radio estimated coverage points.
 
 Cumulative distribution function of Outdoor Radio estimated coverage points for 904 Radios in the
 L.A. market area.
+
+### Modeled Coverage Explorer
+
+:::tip check coverage
+
+Modeled Coverage Explorer is available [here](https://coverage-explorer.herokuapp.com/).
+
+:::
+
+Modeled Coverage data will play a key role in providing information to visualize it, with more data
+added as additional external sources (e.g., [Mobile Mappers](/5g-on-helium/mobile-mappers)) come
+into play.
+
+HIP-74 proposed the creation of a new Mobile Explorer dedicated exclusively to the MOBILE Network as
+adding more features and data for MOBILE Rewards to the IOT Network Explorer becomes practically
+impossible as the MOBILE Network grows. The first iteration of the MOBILE Explorer proposes a basic
+map overlay of 5G data coverage with signal strength.
 
 ---
 
