--- a/blog/2020-09-17-blockchain-poc-v9-postmortem.mdx
+++ b/blog/2020-09-17-blockchain-poc-v9-postmortem.mdx
@@ -47,8 +47,8 @@ deployed Generation 1 Hotspots.
   - Extraneous logging in `poc_receipts_txn` and `rewards_txn`, which we addressed
     [here](https://github.com/helium/blockchain-core/pull/619)
 - A subsequent
-  [release](https://engineering.helium.com/2020/09/16/blockchain-emergency-release.html) with the
-  above two fixes was GA-ed and deployed immediately
+  [release](https://engineering.helium.comhttps://docs.helium.com/blog/2020/09/16/blockchain-emergency-release.html)
+  with the above two fixes was GA-ed and deployed immediately
 
 #### Continued Troubles: Extremely long election blocks, Wed Sep 16 12:09:40 PM UTC 2020
 
