--- a/blog/2020-03-18-voting-poc-fix.mdx
+++ b/blog/2020-03-18-voting-poc-fix.mdx
@@ -8,7 +8,8 @@ date: 2020-03-18 17:00 -0800
 
 For that past month or so, our various fixes and optimizations have done a fairly good job of
 preventing long blocks and keeping token emissions on schedule. For more details see
-[here](/2020/01/27/oom-fix.html) and [here](/2020/01/31/time-catchup.html).
+[here](https://docs.helium.com/blog/2020/01/27/oom-fix.html) and
+[here](https://docs.helium.com/blog/2020/01/31/time-catchup.html).
 
 <!--truncate-->
 
