--- a/blog/2020-09-21-blockchain-poc-v10.mdx
+++ b/blog/2020-09-21-blockchain-poc-v10.mdx
@@ -9,8 +9,9 @@ The `2020.09.21.1` blockchain release adds support for `PoC v10`.
 <!--truncate-->
 
 With the release of `PoC v9`, the blockchain experienced a halt and subsequent block slow down,
-please refer [here](https://engineering.helium.com/2020/09/17/blockchain-poc-v9-postmortem.html) for
-further details. This release addresses the performance issues the team noticed with `PoC v9`.
+please refer
+[here](https://engineering.helium.comhttps://docs.helium.com/blog/2020/09/17/blockchain-poc-v9-postmortem.html)
+for further details. This release addresses the performance issues the team noticed with `PoC v9`.
 
 #### Proof-of-Coverage v10
 
