--- a/docs/troubleshooting/improving-poc.mdx
+++ b/docs/troubleshooting/improving-poc.mdx
@@ -1,7 +1,10 @@
 ---
 id: improving-poc
 title: Improving Proof-Of-Coverage
+pagination_label: Improving PoC
 sidebar_label: Improving Proof-Of-Coverage
+description: Helium Documentation
+image: https://i.imgur.com/bWAbESE.png
 slug: /troubleshooting/improving-poc
 ---
 
