--- a/docs/5g-on-helium/mobile-poc.mdx
+++ b/docs/5g-on-helium/mobile-poc.mdx
@@ -205,7 +205,7 @@ The reward tiers for Outdoor Radios will be as follows:
 | **Potential Signal Level**    |     High      |           Medium           |             Low             |       None       |
 | **Estimated coverage points** |      16       |             8              |              4              |        0         |
 
-:::note Modeled Coverage Distance Limit for Outdoor Radios
+:::info Modeled Coverage Distance Limit for Outdoor Radios
 
 The Modeled Coverage algorithm limits the radius of coverage for a given Radio to 1000 meters. This
 value results from evaluating a selection of "ideal case" Radios, which provided usable coverage to
