--- a/docs/troubleshooting/improving-poc.mdx
+++ b/docs/troubleshooting/improving-poc.mdx
@@ -6,6 +6,7 @@ sidebar_label: Improving Proof-Of-Coverage
 description: Helium Documentation
 image: https://docs.helium.com/img/link-image.png
 slug: /troubleshooting/improving-poc
+draft: True
 ---
 
 # Improving Proof-Of-Coverage
