--- a/docs/troubleshooting/improving-poc.mdx
+++ b/docs/troubleshooting/improving-poc.mdx
@@ -6,14 +6,13 @@ sidebar_label: Improving Proof-Of-Coverage
 description: Helium Documentation
 image: https://docs.helium.com/img/link-image.png
 slug: /troubleshooting/improving-poc
-draft: true
 ---
 
-# Improving Proof-Of-Coverage
+Has your Hotspot been unable to complete challenges on the network? If there are known Hotspots in
+the neighborhood, they just may not be able to hear you because of interference or its position is
+poor.
 
-### Has your Hotspot been unable to complete challenges on the network? If there are known Hotspots in the neighborhood, they just may not be able to hear you because of interference or its position is poor.
-
-#### There are a few ways to try and address this.
+## There are a few ways to try and address this.
 
 1. Moving the Hotspot to a different window, or higher floor if possible. Metal window screens can
    also affect RF, so if those can be removed it may improve the signal.
